apps/infra/minio-tenant-1/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: vulfminio-console-http
spec:
  ports:
    - name: http-console
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    v1.min.io/tenant: vulfminio
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.vulf.haus`)
      kind: Rule
      services:
        - name: vulfminio-console-http
          port: 9000

  tls:
    secretName: cm-staging-shared-wildcard-vulfhaus-tls
